Add - Other details

--- a/index.html
+++ b/index.html
@@ -12,14 +12,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="main-section">
-        <header id>
+        <header>
             <p id="primary-heading">Srihariharan S A</p>
             <p id="primary-tag">GRAPHIC DESIGNER | ENTREPRENUER </p>
-
         </header>
+        <br><br>
+        <h1 class="subhead">About Me</h1>
+        <p class="subhead-con">Being an Engineering graduate running a
+            design agency, I bring a unique blend of
+            technical skills and creativity to the table.
+            My engineering coursework provides the
+            technical foundation while my design
+            business fuels the creativity needed to
+            develop inspired solutions.
+            </p>
+        <br>
+        <h2 class="subhead">Expertised in</h2>
+        <ul id="skills">
+            <li>Graphic Designing</li>
+            <li>Business Management</li>
+            <li>Prominent Leadership</li>
+            <li>Python Programming</li>
+            <li>Java Programming</li>
+        </ul>
+        <br>
+        <h2 class="subhead">Experience</h2>
+        <h3 class="position">Founder & CEO | Artificial Creatives</h3>
+        <p class="year">2020 - Present</p>
+        <h3 class="position">UI/UX Intern | Spark India pvt. ltd.</h3>
+        <p class="year">May 2022 -  Present</p>
+        <h3 class="position">AI Intern | Infoziant IT Solutions</h3>
+        <p class="year">Jan 2023 - Feb 2023</p>
+        <h3 class="position">Non-Technical Lead | Google Developer Student Clubs - Saveetha Engineering College Chapter</h3>
+        <p class="year">2023 - Present</p>
     </section>
 </body>
 </html>
